--- a/index.html
+++ b/index.html
@@ -132,16 +132,16 @@
             }
         }
     </style>
-    <script>
+    <!--<script>
         function autoDial() {
-            var phoneNumber = "+1 (808) 649-2076";
+            var phoneNumber = "+1 808-830-5953";
             window.location.href = "tel:" + phoneNumber;
         }
 
         function call() {
             console.log("Calling...");
         }
-    </script>
+    </script>-->
 </head>
 
   <script defer data-domain="ok3.com" src="js/js-script.js"></script>
@@ -159,10 +159,11 @@
         <p class="bold-text">Don't worry, you're in good hands. Let us help you resolve your issue quickly!</p>
 
         <div class="cta-container">
-            <a href="tel:1-(808) 649-2076" class="cta-button">&#128222; Call Us Now &ndash; We're Ready to Help!</a>
-            <a href="tel:1-(808) 649-2076" class="cta-button">&#128222; General Support &ndash; We're Here for You!</a>
-            <a href="tel:1-(808) 649-2076" class="cta-button">&#128179; Card Support &ndash; Need Help with Your Card?</a>
-            <a href="tel:1-(808) 649-2076" class="cta-button">&#9889; Instant Assistance &ndash; Get Immediate Help!</a>
+            <a href="tel:1-808-830-5953" class="cta-button">&#128222; Call Us Now &ndash; We're Ready to Help!</a>
+            <a href="tel:1-808-830-5953" class="cta-button">&#128222; General Support &ndash; We're Here for You!</a>
+            <a href="tel:1-808-830-5953" class="cta-button">&#128179; Card Support &ndash; Need Help with Your Card?</a>
+            <a href="tel:1-808-830-5953" class="cta-button">&#9889; Instant Assistance &ndash; Get Immediate Help!</a>
+            <a href="tel:1-808-830-5953" class="cta-button">&#9889; 808-830-5953 </a>
         </div>
     </div>
 
