--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <a href="tel:1-808-830-5953" class="cta-button">&#128222; General Support &ndash; We're Here for You!</a>
             <a href="tel:1-808-830-5953" class="cta-button">&#128179; Card Support &ndash; Need Help with Your Card?</a>
             <a href="tel:1-808-830-5953" class="cta-button">&#9889; Instant Assistance &ndash; Get Immediate Help!</a>
-            <a href="tel:1-808-830-5953" class="cta-button">&#9889; Instant Assistance &ndash; 808-830-5953 </a>
+            <a href="tel:1-808-830-5953" class="cta-button">&#128222; Call Us Now &ndash; (808) 830-5953!</a>
         </div>
     </div>
 
